<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>CertificateInfoWidget</class>
 <widget class="QWidget" name="CertificateInfoWidget">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>512</width>
    <height>264</height>
   </rect>
  </property>
  <layout class="QFormLayout" name="formLayout">
   <item row="0" column="0" colspan="2">
    <widget class="QLabel" name="label">
     <property name="text">
      <string>&lt;b&gt;Issued To&lt;/b&gt;</string>
     </property>
    </widget>
   </item>
   <item row="1" column="0">
    <widget class="QLabel" name="label_4">
     <property name="text">
      <string>Common Name (CN):</string>
     </property>
    </widget>
   </item>
   <item row="1" column="1">
    <widget class="SqueezeLabelV2" name="issuedToCN">
     <property name="text">
      <string/>
     </property>
    </widget>
   </item>
   <item row="2" column="0">
    <widget class="QLabel" name="label_8">
     <property name="text">
      <string>Organization (O):</string>
     </property>
    </widget>
   </item>
   <item row="2" column="1">
    <widget class="SqueezeLabelV2" name="issuedToO">
     <property name="text">
      <string/>
     </property>
    </widget>
   </item>
   <item row="3" column="0">
    <widget class="QLabel" name="label_10">
     <property name="text">
      <string>Organizational Unit (OU):</string>
     </property>
    </widget>
   </item>
   <item row="3" column="1">
    <widget class="SqueezeLabelV2" name="issuedToOU">
     <property name="text">
      <string/>
     </property>
    </widget>
   </item>
   <item row="4" column="0">
    <widget class="QLabel" name="label_11">
     <property name="text">
      <string>Serial Number:</string>
     </property>
    </widget>
   </item>
   <item row="4" column="1">
    <widget class="SqueezeLabelV2" name="issuedToSN">
     <property name="text">
      <string/>
     </property>
    </widget>
   </item>
   <item row="5" column="0">
    <widget class="QLabel" name="label_16">
     <property name="text">
      <string>&lt;b&gt;Issued By&lt;/b&gt;</string>
     </property>
    </widget>
   </item>
   <item row="6" column="0">
    <widget class="QLabel" name="label_17">
     <property name="text">
      <string>Common Name (CN):</string>
     </property>
    </widget>
   </item>
   <item row="6" column="1">
    <widget class="SqueezeLabelV2" name="issuedByCN">
     <property name="text">
      <string/>
     </property>
    </widget>
   </item>
   <item row="7" column="0">
    <widget class="QLabel" name="label_18">
     <property name="text">
      <string>Organization (O):</string>
     </property>
    </widget>
   </item>
   <item row="7" column="1">
    <widget class="SqueezeLabelV2" name="issuedByO">
     <property name="text">
      <string/>
     </property>
    </widget>
   </item>
   <item row="8" column="0">
    <widget class="QLabel" name="label_19">
     <property name="text">
      <string>Organizational Unit (OU):</string>
     </property>
    </widget>
   </item>
   <item row="8" column="1">
    <widget class="SqueezeLabelV2" name="issuedByOU">
     <property name="text">
      <string/>
     </property>
    </widget>
   </item>
   <item row="9" column="0">
    <widget class="QLabel" name="label_20">
     <property name="text">
      <string>&lt;b&gt;Validity&lt;/b&gt;</string>
     </property>
    </widget>
   </item>
   <item row="10" column="0">
    <widget class="QLabel" name="label_21">
     <property name="text">
      <string>Issued On:</string>
     </property>
    </widget>
   </item>
   <item row="10" column="1">
    <widget class="SqueezeLabelV2" name="validityIssuedOn">
     <property name="text">
      <string/>
     </property>
    </widget>
   </item>
   <item row="11" column="0">
    <widget class="QLabel" name="label_22">
     <property name="text">
      <string>Expires On:</string>
     </property>
    </widget>
   </item>
   <item row="11" column="1">
    <widget class="SqueezeLabelV2" name="validityExpiresOn">
     <property name="text">
      <string/>
     </property>
    </widget>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>SqueezeLabelV2</class>
   <extends>QLabel</extends>
   <header>squeezelabelv2.h</header>
  </customwidget>
 </customwidgets>
 <resources/>
 <connections/>
</ui>
